--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">CloudStorage_Android</string>
+    <string name="app_name">云存储</string>
+    <string name="login_btn_txt">登录</string>
+    <string name="login_username_et_hint">请输入用户名</string>
+    <string name="login_password_et_hint">请输入密码</string>
 </resources>
